--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mosaic-react",
   "version": "0.1.0",
+  "homepage": "https://edgass.github.io/MenuSn-Hotel",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -12,6 +15,7 @@
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
     "dotenv": "^16.0.3",
+    "final-form": "^4.20.10",
     "firebase": "^9.18.0",
     "moment": "^2.29.4",
     "primeflex": "^3.3.0",
@@ -19,6 +23,7 @@
     "primereact": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.43.8",
     "react-redux": "^8.0.5",
@@ -30,6 +35,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "vite": "^4.1.1"
